--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,4 +4,5 @@
   <%= group.owner_id %><br>
   <%= group.name %><br>
   <%= group.introduction %><br>
+  <%= link_to "Edit", edit_group_path(group.id) %><br>
 <% end %>
