--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <h1>group show</h1>
 <%= @group.name %>
 <%= @group.introduction %>
-<% if group.owner_id == current_user.id %>
+<% if @group.owner_id == current_user.id %>
   <%= link_to "Edit", edit_group_path(@group.id) %>
 <% end %>
